Change hbase-client to hbase-shaded-client

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 
     <dependency>
       <groupId>org.apache.hbase</groupId>
-      <artifactId>hbase-client</artifactId>
+      <artifactId>hbase-shaded-client</artifactId>
       <version>${hbase.shaded.client.version}</version>
     </dependency>
 
